fixed signup overflow issue

--- a/login-singup/style.css
+++ b/login-singup/style.css
@@ -96,6 +96,9 @@ h6 {
   --secondary-color: rgb(165, 68, 165);
   --form-label-color: rgb(162, 158, 158);
 }
+.container{
+  display: flex;
+}
 .logo-holder,
 .logo-img-holder {
   display: flex;
@@ -109,48 +112,40 @@ h6 {
 }
 .logo-holder {
   height: 100vh;
-  width: 40%;
-  max-width: 40%;
+  min-width: 40%;
   background-image: url("./assets/photo.jpg");
-  float: left;
 }
 .form-holder {
   display: flex;
   justify-content: center;
   flex-direction: column;
   height: 100vh;
-  width: 60%;
-  max-width: 60%;
-  float: right;
+  min-width: 60%;
   background-color: var(--form-label-color);
 }
 .input-holder {
-  border: 5px solid pink;
   background: white;
-  height: 100%;
-  box-shadow: 5px whitesmoke;
 }
-form div {
-  margin-top: 1rem;
+.form-holder h1,.log-in-opt{
+  margin: 20px;
 }
-.first-name,
-.email,
-.password {
-  float: left;
-  margin-left: 7rem;
+.log-in-opt{
+  font-size: 1.3rem;
 }
-.last-name,
-.phone-no,
-.confirm-password {
-  float: right;
-  margin-right: 7rem;
+.log-in-opt a{
+  color: var(--secondary-color);
 }
-.confirm-password,
-.password {
-  margin-bottom: 1rem;
+.name,.contact,.security,.login{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  flex-wrap: wrap;
+}
+.name div, .contact div, .security div, .login div{
+  padding: 20px;
 }
 label {
-  margin-top: 2rem;
   display: block;
 }
 input {
@@ -165,6 +160,9 @@ label {
   color: var(--form-label-color);
 }
 button {
+  cursor: pointer;
+  margin: 20px;
+  padding: 10px;
   background-color: var(--secondary-color);
   color: var(--primary-color);
 }
@@ -185,4 +183,14 @@ button {
   .nav-container {
       display: none;
   }
+}
+@media screen and (max-width: 780px) {
+  .name,.contact,.security,.login{
+    padding: 0;
+  }
+  .form-holder h1,.log-in-opt,button{
+    margin: 0px;
+    padding: 0px;
+  }
+
 }
